--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,14 @@
 title: Italo Lima
 email: italo@auburn.edu
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://italoraony.github.io" # the base hostname & protocol for your site
+  I need to write some very nice description of this site. 
+  For now, just know that this is my site.
+baseurl: "/" # the subpath of your site, e.g. /blog/
+url: "http://www.auburn.edu/~izc0007" # the base hostname & protocol for your site
 twitter_username: italoraony
 github_username:  italoraony
+timezone: America/Chicago
+
 
 # Build settings
 markdown: kramdown
