--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ email: italo@auburn.edu
 description: > # this means to ignore newlines until "baseurl:"
   I need to write some very nice description of this site. 
   For now, just know that this is my site.
-baseurl: "/" # the subpath of your site, e.g. /blog/
-url: "http://www.auburn.edu/~izc0007" # the base hostname & protocol for your site
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "italoraony.github.io" # the base hostname & protocol for your site
 twitter_username: italoraony
 github_username:  italoraony
 timezone: America/Chicago
